# GSearch-dist-shift

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  Woloszko 2020.md  pyproject.toml  run_all_pulls.py
src/00_gtrends_ai/: pull.py
src/01_gtrends_econ/: pull.py
src/02_qna/: pull.py
src/03_bls/: process.py
src/04_census/: pull.py  pull_epi.py
src/05_panel_msa/: build.py
src/06_panel_country/: build.py
src/10_validation/: run.py
src/utils/: category_mapping.py  crosswalks.py  gtrends.py  validation.py
