[project]
name = "gsearch-dist-shift"
version = "0.1.0"
description = "AI-Induced Distribution Shift in Google Trends: Implications for GDP Nowcasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytrends",
    "tenacity",
    "requests",
    "pandas",
    "numpy",
    "linearmodels",
    "statsmodels",
    "pygam",
    "lightgbm",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "arch",
    "ruptures",
    "python-dotenv",
    "pyarrow",
    "urllib3<2",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]